static authentication pages

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -6,8 +6,8 @@
       <div class="ui large secondary inverted pointing menu">
         <a class="active item">Ctrim</a>
         <div class="right item">
-          <a class="ui inverted button">Log in</a>
-          <a class="ui inverted button">Sign Up</a>
+          <a routerLink="/login" class="ui inverted button">Log in</a>
+          <a routerLink="/signup" class="ui inverted button">Sign Up</a>
         </div>
       </div>
     </div>
