--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,6 +5,7 @@
     <div class="ui container">
       <div class="ui large secondary inverted pointing menu">
         <a class="active item">Ctrim</a>
+        <a routerLink="/dashboard" class="item">Dashboard</a>
         <div class="right item">
           <a routerLink="/login" class="ui inverted button">Log in</a>
           <a routerLink="/signup" class="ui inverted button">Sign Up</a>
