--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -9,21 +9,21 @@
               Log-in to your account
             </div>
           </h2>
-          <form class="ui large form">
+          <form class="ui large form" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
             <div class="ui stacked segment">
               <div class="field">
                 <div class="ui left icon input">
                   <i class="user icon"></i>
-                  <input type="text" name="email" placeholder="E-mail address">
+                  <input type="text" formControlName="email" placeholder="E-mail address" required>
                 </div>
               </div>
               <div class="field">
                 <div class="ui left icon input">
                   <i class="lock icon"></i>
-                  <input type="password" name="password" placeholder="Password">
+                  <input type="password" formControlName="password" placeholder="Password" required>
                 </div>
               </div>
-              <div class="ui fluid large teal submit button">Login</div>
+              <button type="submit" class="ui fluid large teal submit button" [disabled]="!loginForm.valid">Login</button>
             </div>
       
             <div class="ui error message"></div>
