--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -24,10 +24,10 @@
                 </div>
               </div>
               <button type="submit" class="ui fluid large teal submit button" [disabled]="!loginForm.valid">Login</button>
+              <app-loader></app-loader>
             </div>
       
             <div class="ui error message"></div>
-      
           </form>
       
           <div class="ui message">
