--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -20,7 +20,7 @@
               <div class="field">
                 <div class="ui left icon input">
                   <i class="lock icon"></i>
-                  <input type="password" formControlName="password" placeholder="Password" required>
+                  <input type="password" formControlName="password"  placeholder="Password">
                 </div>
               </div>
               <button type="submit" class="ui fluid large teal submit button" [disabled]="!loginForm.valid">Login</button>
