--- a/src/app/components/stores/stores.component.html
+++ b/src/app/components/stores/stores.component.html
@@ -1,30 +1,6 @@
 <div class="stores">
     <div class="ui text container">
-        <div class="ui secondary  menu">
-            <a routerLink="/home" class="item">
-              Home
-            </a>
-            <a routerLink="/dashboard" class=" item">
-              Dashboard
-            </a>
-            <a class="active item">
-              Stores
-            </a>
-            <a class="item">
-                Staff
-              </a>
-            <div class="right menu">
-              <div class="item">
-                <div class="ui icon input">
-                  <input type="text" placeholder="Search...">
-                  <i class="search link icon"></i>
-                </div>
-              </div>
-              <a class="ui item">
-                Logout
-              </a>
-            </div>
-          </div>
+          <app-menu></app-menu>
           <div class="ui cards">
               <div class="card">
                 <div class="content">
