Add store error handling

--- a/src/app/stores/stores.component.css
+++ b/src/app/stores/stores.component.css
@@ -1,3 +1,7 @@
+.field .field-error {
+	border: 1px solid red !important;
+	margin-top: 4px;
+}
 .stores {
     background-color: #DADADA;
     height: 100%;
