--- a/src/app/stores/components/store-detail/store-detail.component.html
+++ b/src/app/stores/components/store-detail/store-detail.component.html
@@ -2,13 +2,22 @@
     <button class="float circular ui icon teal button">
         <i class="my-float file icon"></i>
     </button>
+    
     <div class="label-container">
         <div class="ui grey right pointing label big">Take Stock</div>
       </div>
-    <div (click)='onBack()' class="ui container">
-        <button class="ui  blue button">
+    <div class="ui container">
+        <button  (click)='onBack()' class="ui  blue button">
             Back
-          </button>
+        </button>
+        <div style="float: right; margin-top: 2em;" class="ui simple dropdown">
+          <i class="sidebar big icon"></i>
+          <div class="menu">
+            <div class="item">View stocks</div>
+            <div class="item">Edit store info</div>
+            <div class="item">Delete store</div>
+          </div>
+        </div>      
         <app-line-chart ></app-line-chart>
         <app-percentage-cards></app-percentage-cards>
         <app-products class="products"></app-products>
