search products bar

--- a/src/app/stores/components/products/products.component.html
+++ b/src/app/stores/components/products/products.component.html
@@ -1,9 +1,18 @@
 <table class="ui celled striped table">
     <thead>
-      <tr><th colspan="8">
-        Products
-      </th>
-    </tr></thead>
+      <tr>
+        <th colspan="8">
+          Products
+          <div style="float: right" class="ui category search">
+            <div class="ui icon input">
+              <input class="prompt" type="text" placeholder="Search products...">
+              <i class="search icon"></i>
+            </div>
+            <div class="results"></div>
+          </div>
+        </th>
+      </tr>
+    </thead>
     <thead>
       <tr>
         <th>Name</th>
