--- a/src/app/stores/components/products/products.component.html
+++ b/src/app/stores/components/products/products.component.html
@@ -1,7 +1,7 @@
 <table class="ui celled striped table">
     <thead>
       <tr>
-        <th colspan="8">
+        <th colspan="9">
           Products
           <div style="float: right" class="ui category search">
             <div class="ui icon input">
@@ -15,72 +15,93 @@
     </thead>
     <thead>
       <tr>
-        <th>Name</th>
-        <th>Addition Date</th>
+        <th class="name-item">Name</th>
         <th>Packaging</th>
         <th>Package Pieces</th>
         <th>Number Of Packages</th>
         <th>Package Price</th>
         <th>Number Of Pieces</th>
         <th>Piece Price</th>
+        <th>Product Worth</th>
+        <th> Actions </th>
       </tr>
     </thead>
     <tbody>
       <tr>
         <td>Bb Cool HC</td>
-        <td>September 14, 2013</td>
         <td>Bales</td>
         <td>5</td>
         <td>10</td>
         <td>2750</td>
         <td>2</td>
         <td>570</td>
+        <td>57000</td>
+        <td class="actions">
+          <a><i class="edit icon"></i></a>
+          <a><i class="trash alternate outline icon" id="trash"></i></a>
+        </td>
       </tr>
       <tr>
           <td>Bb Cool HC</td>
-          <td>September 14, 2013</td>
           <td>Bales</td>
           <td>5</td>
           <td>10</td>
           <td>2750</td>
           <td>2</td>
           <td>570</td>
+          <td>57000</td>
+          <td class="actions">
+            <a><i class="edit icon"></i></a>
+            <a><i class="trash alternate outline icon" id="trash"></i></a>
+          </td>
       </tr>
       <tr>
           <td>Bb Cool HC</td>
-          <td>September 14, 2013</td>
           <td>Bales</td>
           <td>5</td>
           <td>10</td>
           <td>2750</td>
           <td>2</td>
           <td>570</td>
+          <td>57000</td>
+          <td class="actions">
+            <a><i class="edit icon"></i></a>
+            <a><i class="trash alternate outline icon" id="trash"></i></a>
+          </td>
       </tr>
       <tr>
           <td>Bb Cool HC</td>
-          <td>September 14, 2013</td>
           <td>Bales</td>
           <td>5</td>
           <td>10</td>
           <td>2750</td>
           <td>2</td>
           <td>570</td>
+          <td>57000</td>
+          <td class="actions">
+            <a><i class="edit icon"></i></a>
+            <a><i class="trash alternate outline icon" id="trash"></i></a>
+          </td>
       </tr>
       <tr>
           <td>Bb Cool HC</td>
-          <td>September 14, 2013</td>
           <td>Bales</td>
           <td>5</td>
           <td>10</td>
           <td>2750</td>
           <td>2</td>
           <td>570</td>
+          <td>57000</td>
+          <td class="actions">
+            <a><i class="edit icon"></i></a>
+            <a><i class="trash alternate outline icon" id="trash"></i></a>
+          </td>
       </tr>
     </tbody>
     <tfoot class="full-width">
       <tr>
         <th></th>
-        <th colspan="7">
+        <th colspan="9">
           <div class="ui right floated small primary labeled icon button">
             <i class="cart icon"></i> Add Product
           </div>
