--- a/src/app/products/products.component.css
+++ b/src/app/products/products.component.css
@@ -1,3 +1,9 @@
+form {
+    padding: 6% !important;
+}
+#modal {
+    margin-top: -25% !important;
+}
 #trash {
     margin-left: 2em !important;
     color: red;
