--- a/src/app/products/products.component.css
+++ b/src/app/products/products.component.css
@@ -14,3 +14,7 @@ form {
 th.name-item {
     width: 15% !important;
 }
+.field .field-error {
+	border: 1px solid red !important;
+	margin-top: 4px;
+}
