--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -6,24 +6,25 @@
           <div class="card-group">
             <div class="card p-4">
               <div class="card-body">
-                <form>
+                <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
                   <h1>Login</h1>
                   <p class="text-muted">Sign In to your account</p>
                   <div class="input-group mb-3">
                     <div class="input-group-prepend">
                       <span class="input-group-text"><i class="icon-user"></i></span>
                     </div>
-                    <input type="text" class="form-control" placeholder="Username" autocomplete="username" required>
+                    <input formControlName="email" type="text" class="form-control" placeholder="email" required>
                   </div>
+                  <div style="color: red" [hidden]="loginForm.valid" *ngIf='errors.email'>{{ errors.email[0] }}</div>
                   <div class="input-group mb-4">
                     <div class="input-group-prepend">
                       <span class="input-group-text"><i class="icon-lock"></i></span>
                     </div>
-                    <input type="password" class="form-control" placeholder="Password" autocomplete="current-password" required>
+                    <input formControlName="password" type="password" class="form-control" placeholder="Password" required>
                   </div>
                   <div class="row">
                     <div class="col-6">
-                      <button type="button" class="btn btn-primary px-4">Login</button>
+                      <button type="submit" class="btn btn-primary px-4" [disabled]="!loginForm.valid" >Login</button>
                     </div>
                     <div class="col-6 text-right">
                       <button type="button" class="btn btn-link px-0">Forgot password?</button>
@@ -36,7 +37,7 @@
               <div class="card-body text-center">
                 <div>
                   <h2>Sign up</h2>
-                  <button type="button" class="btn btn-primary active mt-3">Register Now!</button>
+                    <button type="button" [routerLink]="['/register']" class="btn btn-primary active mt-3">Register Now!</button>
                 </div>
               </div>
             </div>
