--- a/src/app/views/register/register.component.html
+++ b/src/app/views/register/register.component.html
@@ -6,7 +6,7 @@
           <div class="card mx-4">
             <div class="card-body p-4">
               <form>
-                <h1>Register</h1>
+                <h1>Register to Ctrim</h1>
                 <p class="text-muted">Create your account</p>
                 <div class="input-group mb-3">
                   <div class="input-group-prepend">
@@ -34,15 +34,8 @@
                 </div>
                 <button type="button" class="btn btn-block btn-success">Create Account</button>
               </form>
-            </div>
-            <div class="card-footer p-4">
-              <div class="row">
-                <div class="col-6">
-                  <button class="btn btn-block btn-facebook" type="button"><span>facebook</span></button>
-                </div>
-                <div class="col-6">
-                  <button class="btn btn-block btn-twitter" type="button"><span>twitter</span></button>
-                </div>
+              <div class="col-6 text-left">
+                <button type="button" [routerLink]="['/login']" class="btn btn-link px-0">Have an account?</button>
               </div>
             </div>
           </div>
