--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -15,7 +15,6 @@
                     </div>
                     <input formControlName="email" type="text" class="form-control" placeholder="email" required>
                   </div>
-                  <div style="color: red" [hidden]="loginForm.valid" *ngIf='errors.email'>{{ errors.email[0] }}</div>
                   <div class="input-group mb-4">
                     <div class="input-group-prepend">
                       <span class="input-group-text"><i class="icon-lock"></i></span>
@@ -27,6 +26,7 @@
                       <button type="submit" class="btn btn-primary px-4" [disabled]="!loginForm.valid" >Login</button>
                     </div>
                     <div class="col-6 text-right">
+                      <button [routerLink]="['/register']" type="button" class="btn btn-link px-0 register-link">Register?</button>
                       <button type="button" class="btn btn-link px-0">Forgot password?</button>
                     </div>
                   </div>
@@ -35,10 +35,8 @@
             </div>
             <div class="card text-white bg-primary py-5 d-md-down-none" style="width:44%">
               <div class="card-body text-center">
-                <div>
-                  <h2>Sign up</h2>
-                    <button type="button" [routerLink]="['/register']" class="btn btn-primary active mt-3">Register Now!</button>
-                </div>
+                <h2>Sign up</h2>
+                <button  [routerLink]="['/register']" type="button" class="btn btn-primary active mt-3">Register Now!</button>
               </div>
             </div>
           </div>
