--- a/src/app/views/register/register.component.html
+++ b/src/app/views/register/register.component.html
@@ -3,36 +3,39 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6 mx-auto">
-          <div class="card mx-4">
+          <div class="card mx-6">
             <div class="card-body p-4">
-              <form>
-                <h1>Register to Ctrim</h1>
-                <p class="text-muted">Create your account</p>
+              <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
+                <p class="text-muted">Create your ctrim account</p>
+                <div style="color: red" [hidden]="signupForm.valid" *ngIf='errors.username'>{{ errors.username[0] }}</div>
                 <div class="input-group mb-3">
                   <div class="input-group-prepend">
                     <span class="input-group-text"><i class="icon-user"></i></span>
                   </div>
-                  <input type="text" class="form-control" placeholder="Username" autocomplete="username" required>
+                  <input [class.field-error]="submitted" formControlName="username" type="text" class="form-control" placeholder="Username">
                 </div>
+                <div *ngIf='errors.email' style="color: red" [hidden]="signupForm.valid">{{ errors.email[0] }}</div>
                 <div class="input-group mb-3">
                   <div class="input-group-prepend">
                     <span class="input-group-text">@</span>
                   </div>
-                  <input type="text" class="form-control" placeholder="Email" autocomplete="email" required>
+                  <input [class.field-error]="submitted" type="text" formControlName="email" class="form-control" placeholder="Email">
                 </div>
+                <div *ngIf='errors.password' style="color: red" [hidden]="signupForm.valid">{{ errors.password[0] }}</div>
                 <div class="input-group mb-3">
                   <div class="input-group-prepend">
                     <span class="input-group-text"><i class="icon-lock"></i></span>
                   </div>
-                  <input type="password" class="form-control" placeholder="Password" autocomplete="new-password" required>
+                  <input [class.field-error]="submitted" formControlName="password" type="password" class="form-control" placeholder="Password" autocomplete="new-password" required>
                 </div>
                 <div class="input-group mb-4">
                   <div class="input-group-prepend">
                     <span class="input-group-text"><i class="icon-lock"></i></span>
                   </div>
-                  <input type="password" class="form-control" placeholder="Repeat password" autocomplete="new-password" required>
+                  <input [class.field-error]="submitted" type="password" formControlName="confirmPassword" class="form-control" placeholder="Confirm password" autocomplete="new-password" required>
                 </div>
-                <button type="button" class="btn btn-block btn-success">Create Account</button>
+                <div *ngIf='errors.confirmPassword' style="color: red" [hidden]="signupForm.valid">{{ errors.confirmPassword[0] }}</div>
+                <button type="submit" class="btn btn-block btn-success" [disabled]="!signupForm.valid">Create Account</button>
               </form>
               <div class="col-6 text-left">
                 <button type="button" [routerLink]="['/login']" class="btn btn-link px-0">Have an account?</button>
