--- a/src/app/views/register/register.component.html
+++ b/src/app/views/register/register.component.html
@@ -7,34 +7,36 @@
             <div class="card-body p-4">
               <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
                 <p class="text-muted">Create your ctrim account</p>
-                <div style="color: red" [hidden]="signupForm.valid" *ngIf='errors.username'>{{ errors.username[0] }}</div>
+                <div style="color: red" *ngIf='errors' [hidden]="signupForm.valid">{{ errors.username[0] }}</div>
                 <div class="input-group mb-3">
                   <div class="input-group-prepend">
                     <span class="input-group-text"><i class="icon-user"></i></span>
                   </div>
-                  <input [class.field-error]="submitted" formControlName="username" type="text" class="form-control" placeholder="Username">
+                  <input formControlName="username" type="text" class="form-control" placeholder="Username">
                 </div>
-                <div *ngIf='errors.email' style="color: red" [hidden]="signupForm.valid">{{ errors.email[0] }}</div>
+                <div *ngIf='errors' style="color: red" [hidden]="signupForm.valid">{{ errors.email[0] }}</div>
                 <div class="input-group mb-3">
                   <div class="input-group-prepend">
                     <span class="input-group-text">@</span>
                   </div>
-                  <input [class.field-error]="submitted" type="text" formControlName="email" class="form-control" placeholder="Email">
+                  <input type="text" formControlName="email" class="form-control" placeholder="Email">
                 </div>
-                <div *ngIf='errors.password' style="color: red" [hidden]="signupForm.valid">{{ errors.password[0] }}</div>
+                <div *ngIf='errors' style="color: red" [hidden]="signupForm.valid">{{ errors.password[0] }}</div>
                 <div class="input-group mb-3">
                   <div class="input-group-prepend">
                     <span class="input-group-text"><i class="icon-lock"></i></span>
                   </div>
-                  <input [class.field-error]="submitted" formControlName="password" type="password" class="form-control" placeholder="Password" autocomplete="new-password" required>
+                  <input formControlName="password" type="password" class="form-control" placeholder="Password" required>
                 </div>
                 <div class="input-group mb-4">
                   <div class="input-group-prepend">
                     <span class="input-group-text"><i class="icon-lock"></i></span>
                   </div>
-                  <input [class.field-error]="submitted" type="password" formControlName="confirmPassword" class="form-control" placeholder="Confirm password" autocomplete="new-password" required>
+                  <div style="color: red" *ngIf="signupForm.errors?.mismatch && (signupForm.controls['confirmPassword'].dirty || signupForm.controls['confirmPassword'].touched)">
+                    Passwords don't match.
+                  </div>
+                  <input type="password" formControlName="confirmPassword" class="form-control" placeholder="Confirm password">
                 </div>
-                <div *ngIf='errors.confirmPassword' style="color: red" [hidden]="signupForm.valid">{{ errors.confirmPassword[0] }}</div>
                 <button type="submit" class="btn btn-block btn-success" [disabled]="!signupForm.valid">Create Account</button>
               </form>
               <div class="col-6 text-left">
