--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -9,6 +9,7 @@
                 <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
                   <h1>Login</h1>
                   <p class="text-muted">Sign In to your account</p>
+                  <div *ngIf='errors' style="color: red" [hidden]="loginForm.valid">{{ errors.non_field_errors[0] }}</div>
                   <div class="input-group mb-3">
                     <div class="input-group-prepend">
                       <span class="input-group-text"><i class="icon-user"></i></span>
