--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -32,9 +32,9 @@
     <!-- breaking change 'cui-breadcrumb' -->
     <cui-breadcrumb>
       <!-- Breadcrumb Menu-->
-      <li class="breadcrumb-menu d-md-down-none">
+      <li class="breadcrumb-menu ">
         <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
-          <a class="btn" href="#"><i class="icon-plus"></i> &nbsp;Add Store</a>
+          <a class="btn" id="add-store" (click)="primaryModal.show()"><i class="icon-plus"></i> Add Store</a>
         </div>
       </li>
     </cui-breadcrumb>
@@ -43,6 +43,36 @@
     </div><!-- /.container-fluid -->
   </main>
 </div>
+
+<div bsModal #primaryModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-primary" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title">Add Store</h4>
+        <button type="button" class="close" (click)="primaryModal.hide()" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form action="" method="post">
+          <div class="form-group">
+            <label for="nf-email">Store name</label>
+            <input type="text" class="form-control" placeholder="Enter store name ...">
+          </div>
+          <div class="form-group">
+            <label for="nf-password">Description</label>
+            <textarea id="textarea-input" name="textarea-input" rows="3" class="form-control" placeholder="Enter a short description ..."></textarea>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" (click)="primaryModal.hide()">Close</button>
+        <button type="button" class="btn btn-primary">Add</button>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+
 <app-footer>
   <span><a href="#">Ctrim</a> &copy; 2020</span>
   <span class="ml-auto">Built with <a href="https://coreui.io/angular">CoreUI for Angular</a></span>
