--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -32,11 +32,11 @@
     <!-- breaking change 'cui-breadcrumb' -->
     <cui-breadcrumb>
       <!-- Breadcrumb Menu-->
-      <li class="breadcrumb-menu ">
+      <!-- <li class="breadcrumb-menu ">
         <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
           <a class="btn" id="add-store" (click)="primaryModal.show()"><i class="icon-plus"></i> Add Store</a>
         </div>
-      </li>
+      </li> -->
     </cui-breadcrumb>
     <div class="container-fluid">
       <router-outlet></router-outlet>
