--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -32,11 +32,11 @@
     <!-- breaking change 'cui-breadcrumb' -->
     <cui-breadcrumb>
       <!-- Breadcrumb Menu-->
-      <!-- <li class="breadcrumb-menu ">
+      <li class="breadcrumb-menu ">
         <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
-          <a class="btn" id="add-store" (click)="primaryModal.show()"><i class="icon-plus"></i> Add Store</a>
+          <a class="btn" id="add-store" (click)="primaryModal.show()"><i class="icon-plus"></i> New stock</a>
         </div>
-      </li> -->
+      </li>
     </cui-breadcrumb>
     <div class="container-fluid">
       <router-outlet></router-outlet>
@@ -48,7 +48,7 @@
   <div class="modal-dialog modal-primary" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h4 class="modal-title">Add Store</h4>
+        <h4 class="modal-title">New Stock</h4>
         <button type="button" class="close" (click)="primaryModal.hide()" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -56,8 +56,8 @@
       <div class="modal-body">
         <form action="" method="post">
           <div class="form-group">
-            <label for="nf-email">Store name</label>
-            <input type="text" class="form-control" placeholder="Enter store name ...">
+            <label for="nf-email">Stock name</label>
+            <input type="text" class="form-control" placeholder="Enter stock name ...">
           </div>
           <div class="form-group">
             <label for="nf-password">Description</label>
