--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -67,13 +67,13 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" (click)="primaryModal.hide()">Close</button>
-        <button type="button" class="btn btn-primary">Add</button>
+        <button type="button" class="btn btn-primary" (click)="onSubmit() ">Add</button>
       </div>
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
 
 <app-footer>
-  <span><a href="#">Ctrim</a> &copy; 2020</span>
-  <span class="ml-auto">Built with <a href="https://coreui.io/angular">CoreUI for Angular</a></span>
+  <span><a href="#">Ctrim</a> &copy; {{current_year}}</span>
+  <span class="ml-auto">Built with <a href="https://angular.io">Angular</a></span>
 </app-footer>
